Prevent ugly name wrapping for long sub-folder names

--- a/website/assets/compiled-css/style.css
+++ b/website/assets/compiled-css/style.css
@@ -744,7 +744,7 @@ footer {
     margin: 12px 0 4px 0;
     cursor: pointer; }
   .page-documents div.sub-directory {
-    margin: 4px 0; }
+    margin: 4px 0 4px 30px; }
   .page-documents .directory > span.folder-icon, .page-documents .directory-private > span.folder-icon,
   .page-documents .directory > span.folder-multi-icon, .page-documents .directory-private > span.folder-multi-icon {
     height: 100%;
