--- a/website/assets/scss/pages/documents/documents.scss
+++ b/website/assets/scss/pages/documents/documents.scss
@@ -189,7 +189,7 @@
         }
 
         &.sub-directory {
-            margin: 4px 0;
+            margin: 4px 0 4px 30px;
         }
     }
 
